# ralphzilla

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CODER_INSTRUCTIONS.md  DESIGN.md  README.md  REVIEWER_INSTRUCTIONS.md  SCRUM_MASTER.md  lessons-learnt.txt  prd.json  pyproject.toml  ralph-loop.sh  ralph.py  ralph_mcp.py  roadmap.md
.agent/rules/: git.md
.github/workflows/: ci.yml
playchitect/: __init__.py  pr_manager.py
tests/: test_ai_runner.py  test_aider_runner.py  test_app_auth.py  test_blocker_analyser.py  test_branch_manager.py  test_ci_poller.py  test_cli.py  test_conflict_detector.py  test_dependency_graph.py  test_discovery_wizard.py  test_escalation_manager.py  test_logger.py  test_loop_supervisor.py  test_mcp_server.py  test_orchestrator.py  test_placeholder.py  test_plan_checker.py  test_plan_consensus.py  test_pr_manager.py  test_prd_generator.py  test_prd_guard.py  test_prd_validator.py  test_precommit_gate.py  test_prompt_builder.py  test_quality_checker.py  test_review_loop.py  test_runner.py  test_scaffold.py  test_scrum_master.py  test_sprint_summary.py  test_subprocess_runner.py  test_task_tracker.py  test_test_runner.py  test_test_writer.py  test_unblock_strategy.py  test_validate_plan.py  test_verify_command.py  test_wave_executor.py  test_wave_summary.py  test_workstream.py  (+1 more)
tests/fixtures/: dry_run_prd.json
tests/integration/: test_dry_run_smoke.py
