[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ralphzilla"
version = "0.1.0"
description = "AI sprint runner — executes prd.json backlogs via AI agents with autonomous failure recovery"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "click>=8.0",
]

[project.scripts]
ralph = "ralph:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
py-modules = ["ralph"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
