[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ralphzilla"
version = "0.1.0"
description = "AI sprint runner — executes prd.json backlogs via AI agents with autonomous failure recovery"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.scripts]
rzilla = "ralph:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "psutil>=5.9",
    "mcp[cli]>=1.0",
]
mcp = [
    "mcp[cli]>=1.0",
    "psutil>=5.9",
    "mcp[cli]>=1.0",
]

[tool.setuptools]
py-modules = ["ralph"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["ralph"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
